
Revision 4.3.3, work in progress
--------------------------------

Github `repo <https://github.com/etingof/pysnmp>`_

- Switched to new-style classes.
- NotificationType now allows additional var-binds specified as
  MIB objects. A side effect of this change is that additional
  var-binds can only be added prior to .resolveMibObjects() is
  run.
- Fix to NotificationType to make additional var-binds overriding
  MIB objects implicitly included through NOTIFICATION-TYPE OBJECTS.
- Fix to SNMP engine boots counter persistence on Python 3.
- Fix to Pythonized MIBs loading when only .pyc files are
  present (e.g. py2exe/cx_freeze environments).
- Fix broken 3DES key localization and encryption procedures.
- Updated IP address for demo.snmplabs.com in examples.

Revision 4.3.2, released 2016-02-12
-----------------------------------

- Copyright notice added to non-trivial source code files.
- SNMP table row consistency check added. This change may break
  valid SNMP SET operations on tables if RowStatus column is not
  passed at the very end of var-binds.
- All SNMP counters now incremented via '+= 1' rather than 'x = x + 1'
  to simplify their tracking by third-party code.
- Notification originator examples re-pointed to Notification Receiver
  at demo.snmplabs.com.
- Two more execution observer points added: rfc2576.processIncomingMsg
  and rfc3414.processIncomingMsg to give an insignt on security modules
  internals.
- TEXTUAL-CONVENTION's DISPLAY-HINT text formatting reworked for better
  performance and encoding accurancy of 'a' and 't' formats.
- WARNING: security fix to USM - extra user entry clone removed on
  incoming message processing. It made USM accepting SNMPv3 TRAPs
  from unknown SNMP engine IDs.
- Fix to snmpInvalidMsgs and snmpUnknownSecurityModels MIB symbols
  import at SNMPv3 MP model.
- Fix to NotificationOriginator to cope with unspecified user callable.
- Fix to OctetString.prettyOut() to pretty-print Python 3 bytes without
  'b' qualifier.