@@ -29,8 +29,10 @@ usmNoAuthProtocol = noauth.NoAuth.serviceID
 usmDESPrivProtocol = des.Des.serviceID
 usm3DESEDEPrivProtocol = des3.Des3.serviceID
 usmAesCfb128Protocol = aes.Aes.serviceID
-usmAesCfb192Protocol = aes192.Aes192.serviceID
-usmAesCfb256Protocol = aes256.Aes256.serviceID
+usmAesBlumenthalCfb192Protocol = aes192.Aes192.serviceID  # semi-standard but not widely used
+usmAesBlumenthalCfb256Protocol = aes256.Aes256.serviceID  # semi-standard but not widely used
+usmAesCfb192Protocol = aes192.AesReeder192.serviceID  # non-standard but used by many vendors
+usmAesCfb256Protocol = aes256.AesReeder256.serviceID  # non-standard but used by many vendors
 usmNoPrivProtocol = nopriv.NoPriv.serviceID
 
 # Auth services
@@ -44,6 +46,8 @@ privServices = {des.Des.serviceID: des.Des(),
                 aes.Aes.serviceID: aes.Aes(),
                 aes192.Aes192.serviceID: aes192.Aes192(),
                 aes256.Aes256.serviceID: aes256.Aes256(),
+                aes192.AesReeder192.serviceID: aes192.AesReeder192(),  # non-standard
+                aes256.AesReeder256.serviceID: aes256.AesReeder256(),  # non-standard
                 nopriv.NoPriv.serviceID: nopriv.NoPriv()}
 
 
