@@ -46,6 +46,8 @@ class SnmpUSMSecurityModel(AbstractSecurityModel):
                     aes.Aes.serviceID: aes.Aes(),
                     aes192.Aes192.serviceID: aes192.Aes192(),
                     aes256.Aes256.serviceID: aes256.Aes256(),
+                    aes192.AesReeder192.serviceID: aes192.AesReeder192(),  # non-standard
+                    aes256.AesReeder256.serviceID: aes256.AesReeder256(),  # non-standard
                     nopriv.NoPriv.serviceID: nopriv.NoPriv()}
 
     def __init__(self):
